<resources>
    <string name="app_name">RepairShop-Android</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Menu strings -->
    <string name="contactUs">Contact Us</string>
    <string name="viewServices">View Services</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="bookAppointment">Book Appointment</string>
    <string name="viewAppointments">View Appointments</string>
    <string name="cancelAppointment">Cancel Appointment</string>
    <string name="logout">Logout</string>
    <string name="homepage">Homepage</string>


    <!-- Book Appointment strings -->
    <string name="select_a_service">Select a service</string>
    <string name="select_a_time_slot">Select a time slot</string>
    <string name="appointment_booked">Your appointment has been booked</string>
    <string name="search_future_date">Search future date</string>
    <string name="go">Go</string>
    <string name="today">Today</string>
    <string name="yyyy_mm_dd_format">YYYY-MM-DD</string>

    <!-- Cancel Appointment strings -->
    <string name="select_an_appointment_to_cancel">Select an appointment to cancel</string>
    <string name="appointment_cancelled">The appointment has been cancelled successfully. A confirmation email  will be sent shortly. </string>

    <!-- View Appointments strings -->
    <string name="list_of_upcoming_appointments">List of upcoming appointments:</string>

    <!-- Login strings -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="you_are_logged_in">You are logged in!</string>
    <string name="the_repair_shop_will_be_closed_on_these_days">The repair shop will be closed on these days:</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="email_address">Email Address:</string>
    <string name="password2">Password:</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="address">Address:</string>
    <string name="welcome_to">Welcome To</string>
</resources>