<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="601dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/signUpError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text=""
            android:textColor="#FF0000"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/signUpSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text=""
            android:textColor="#1BAC1B"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />


        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/email_address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/customerEmailRegister"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/password2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/customerPasswordRegister"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/customerNameRegister"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:singleLine="true" />


        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/customerPhoneRegister"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:singleLine="true" />

        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/customerAddressRegister"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_address"
            android:inputType="textPostalAddress"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:onClick="signUpBack"
                android:text="@string/back"
                android:textAlignment="center"
                tools:ignore="ButtonStyle"
                style="?android:attr/borderlessButtonStyle"
                />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginBottom="10dp"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="signUp"
                android:text="@string/sign_up"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>