<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingRight="20sp">

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:text="@string/bookAppointment"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_anchor="@+id/textView3"
            app:layout_anchorGravity="center" />

        <LinearLayout
            android:id="@+id/book1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookSelectAService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16sp"
                android:text="@string/select_a_service"
                android:textSize="18sp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bookServiceList" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/book2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/bookSelectATimeSlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16sp"
                android:text="@string/select_a_time_slot"
                android:textSize="18sp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/possibleTimeSlotsList" />

        </LinearLayout>

        <TextView
            android:id="@+id/bookError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16sp"
            android:text=""
            android:textColor="?attr/colorError"
            android:textSize="18sp"
            tools:visibility="gone" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>